--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <html>
 <head>
 <title> Vandana Enterprises</title>
+	
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GTDNY88VBP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GTDNY88VBP');
+</script>
+	
+	
+	
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.0/css/fontawesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
